--- a/flyt.html
+++ b/flyt.html
@@ -10,6 +10,7 @@
     <style>
         body {
             background-color: rgb(248, 184, 184);
+            align-items: center;
         }
 
         .letter {
@@ -43,10 +44,10 @@
 
     <div class ="guess_box">
         <input type="text" placeholder="Type number here" id="inputID">
-        <button style=font-family:Verdana id="knappID"> Guess! </button>
+        <button style=font-family:Verdana id="knappID"> &#10024; </button>
     </div>
 
-    <h3 style=font-family:verdana id="forsøk">Attempts:</h3>
+    <h3 style=font-family:verdana id="forsøk"> &#9825; Attempts:</h3>
 
 
     <script>
